[package]
name = "p110-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
env_logger = "0.11.6"
log = "0.4.22"
prometheus-client = "0.22.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
tapo = "0.7.17"
tokio = { version = "1.41.1", features = ["full"] }
